--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,6 +9,131 @@
 @import '~bootstrap/scss/bootstrap';
 
 .navbar-laravel {
+	width: 100%;
   background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+  display: inline-flex;
+}
+.boss{
+	margin: 10px; 
+	display: inline-flex; 
+	border: solid 2px;
+}
+html, body {
+	background-color: #fff;
+	color: #636b6f;
+	font-family: 'Nunito', sans-serif;
+	font-weight: 200;
+	height: 100vh;
+	margin: 0;
+}
+.container{
+	margin-top: 20%;
+}
+
+.full-height {
+    height: 100vh;
+}
+
+.flex-center {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.position-ref {
+    position: relative;
+}
+
+.top-right {
+    position: absolute;
+    right: 10px;
+    top: 18px;
+}
+
+.content {
+    text-align: center;
+}
+
+.links > a {
+    color: #636b6f;
+    padding: 0 25px;
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: .1rem;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.m-b-md {
+    margin-bottom: 30px;
+}
+#flag{
+	display: inline-flex;
+}
+#dashboard{
+    position: absolute;
+    margin: 10px;
+    right: 0px;
+}
+nav{
+    display: flex;
+    margin: auto;
+    justify-content: space-between;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+}
+li{
+    list-style: none;
+    display: inline-block;
+}
+nav > a{
+    margin: 5px;
+}
+a{
+    text-decoration: none;
+    color: black;
+    border-radius: 15px;
+}
+a:hover, i:hover{
+    color: #4bc16b;
+}
+button{
+    border-radius: 5px;
+    background-color: unset;
+    border: none;
+}
+#loc{
+    color: #4bc16b;
+}
+strong{
+	font-weight: bold;
+}
+.title{
+	font-size: 2em;
+}
+.hidden{
+	display: none;
+}
+i:hover{
+	cursor: pointer;
+}
+header{
+	position: fixed;
+	top: 0px;
+	width: 100%;
+	background-color: white;
+}
+.location{
+	width: 100%;
+	margin: 10px;
+	display: inline-flex;
+	border: solid 2px;
+}
+.location > div > div{
+	margin: 5px;
+}
+.Affichage{
+	display: contents;
+}
+form{
+	margin: 10px;
 }
