calendrier compatibilité et selector

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10727,7 +10727,7 @@ form {
   float: right;
 }
 .inputDate{
-  margin: 1px;
+  margin: margin: 1px 23px 2px 1px;
   display: flex;
 }
 .internal{
